top frequency backtracking problems