@@ -1,34 +1,28 @@
 package BackTracking;
 
-class Combinations {
-    int n;
-    int k;
-    List<List<Integer>> combinations =  new LinkedList();
+class Solution {
+    class Solution {
     
-    public List<List<Integer>> combine(int n, int k) {
-        this.n = n;
-        this.k = k;
+        List<List<Integer>> result = new ArrayList<>();
         
-        createCombination(1, new LinkedList<Integer>());
-        
-        System.out.println(combinations);
-        
-        return combinations;
-    }
-    
-    // backtracking algorithm
-    private void createCombination(int start, LinkedList<Integer> current) {
-        
-        if (current.size() == k) {
-            combinations.add(new LinkedList(current));
-            return;
+        public List<List<Integer>> combine(int n, int k) {
+            backtracking(1, new ArrayList<Integer>(), k, n);
+            return result;
         }
         
-        for (int i = start; i <= n ; i++) {
-            current.add(i);
-            createCombination(i + 1, current);
-            current.removeLast();
+        private void backtracking(int index, List<Integer> cur, int k, int n) {
+            
+            // base case - if the combination is done
+            if (cur.size() == k) {
+                result.add(new ArrayList<Integer>(cur));
+                return;
+            }
+            
+            // explore available choices
+            for (int i = index; i <= n; i++) {
+                cur.add(i);     // make a choice
+                backtracking(i + 1, cur, k, n);
+                cur.remove(cur.size() - 1);     // clean up
+            }
         }
-        
     }
-}
